--- a/lesson 12/index.html
+++ b/lesson 12/index.html
@@ -6,10 +6,23 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <!-- <meta name="keywords" content="вёрстка, HTML, CSS, блог">
  <meta name="description" content="Блог о процессе обучения веб-технологиям"> -->
- <link rel="stylesheet" href="./css/**/*.*">
+ <link rel="stylesheet" href="./css/style.css">
  <title>Lesson 12 FLS</title>
 </head>
 <body>
-    dsvsdvs   
+    <div class="block">
+        <div class="block_1">
+            .block_1
+        </div>
+        <div class="block_2">
+            .block_2
+        </div>
+        <div class="block_3">
+            .block_3
+        </div>
+        <div class="block_4">
+            .block_4
+        </div>
+    </div>   
 </body>
 </html>
